# datacube-alchemist

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  README.rst  constraints.txt  docker-compose-dev.yml  docker-compose.yaml  docker-compose.yml  eodatasets3  fc  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.in  requirements.txt  setup.cfg  setup.py  temp.py
.github/: dependabot.yml
.github/workflows/: build_tag_push_image.yml  datacube-alchemist.yml  linting_and_tests.yml  publish-pypi.yml  push.yml  pythonapp.yml  scan.yml  test-and-push.yml  test.yml
datacube_alchemist/: __init__.py  _dask.py  _utils.py  assume_role_helper.py  cli.py  cloud_wrapper.py  settings.py  transforms.py  upload.py  utils.py  watchqueue.py  worker.py
datacube_alchemist/helper/: assume_role_helper.py
examples/: DEAfrica_fc_config.yaml  DEAfrica_ls8_fc_config.yaml  DEAfrica_ls8_fc_scale_config.yaml  DEAfrica_ls8_fc_scale_fake_config.yaml  DEAfrica_wofs_c2_no_dsm.yaml  DEAfrica_wofs_no_dem.yaml  DEAfrica_wofs_no_dsm.yaml  Makefile  ard_interop_config.yaml  c3_config_bai.yaml  c3_config_bai_s2be.yaml  c3_config_bm_provisional.yaml  c3_config_dnbr.yaml  c3_config_dnbr_3band.yaml  c3_config_dnbr_3band_s2be.yaml  c3_config_fc.yaml  c3_config_wo.yaml  c3_config_wofs.yaml  c3_samples_config.yaml  c3_samples_config_fc.yaml  config_ba_C3_ARD_provisional.yaml  config_ba_L2_ARD.yaml  fc_config_S2A.yaml  fc_config_sentinel2_alex.yaml  fc_config_sentinel2a_alex.yaml  fc_config_sentinel2a_dsg_test.yaml  fc_config_sentinel2b_alex.yaml  fc_config_sentinel2b_test.yaml  fc_ls.alchemist.yaml  nci_ls8c_l2_c2tofc.yaml  sample_kubernetes_deployment.yaml  virtual_box_ls8c_l2_c2tofc.yaml  wofs_config_S2A.yaml  wofs_config_sentinel2b_alex.yaml  wofs_ls.alchemist.yaml  wofs_no_dsm.yaml
examples/archive/: DEAfrica_ls8_fc_scale_config.yaml  DEAfrica_wofs_c2_no_dsm.yaml  DEAfrica_wofs_no_dsm.yaml  fc_config_africa.yaml  fc_config_sentinel2a_alex.yaml  fc_config_sentinel2b_alex.yaml  sample_kubernetes_deployment.yaml  virtual_box_ls8c_l2_c2tofc.yaml  wofs.yaml  wofs_config_sentinel2b_alex.yaml  wofs_no_dsm.yaml
k8s/: africa-add-to-alchemist.yaml  africa-pull-from-alchemist.yaml  africa-push-to-alchemist.yaml  africa-wofs-processor.yaml  user-africa-dev-pod.yaml
tests/: c3_config_bai_s2be.yaml  c3_config_dnbr_3band_s2be.yaml  c3_config_wo_resampling.yaml  conftest.py  integration_tests.sh  test_alchemist.py  test_datacube_alchemist.py  test_integration.py
tests/data/: fc_ls_159069_2021-07-17.stac-item.json
