[metadata]
name = datacube-alchemist
license = Apache License 2.0
description = Batch process Open Data Cube datasets
keywords = datacube-alchemist,opendatacube
url = https://github.com/opendatacube/datacube-alchemist
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
platforms = any

[options]
packages = find:
zip_safe = True
setup_requires = setuptools_scm
install_requires =
    datacube
    eodatasets3>=0.22.0
    attrs>=18.1
    cattrs==1.0.0
    structlog
    boto3
    dask
    distributed
    fsspec
    s3fs
    jsonschema
    requests
    odc-aws
    odc-algo
    odc-index
    awscli

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    datacube-alchemist = datacube_alchemist.cli:cli_with_envvar_handling

[options.extras_require]
dev = 
  black
  pytest
  pytest-cov
  moto

[flake8]
extend-ignore = E203
max-line-length = 120
exclude = docs,tests,.eggs
doctests = True

[wheel]
universal = 1

[tool:pytest]
norecursedirs = .git
addopts = --cov=datacube_alchemist

[coverage:run]
branch = True
omit = tests/*
