[metadata]
name = datacube-alchemist
license = Apache License 2.0
description = Batch process Open Data Cube datasets
keywords = datacube-alchemist,opendatacube
url = https://github.com/opendatacube/datacube-alchemist
long_description_content_type = text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
platforms = any

[options]
packages = find:
zip_safe = True
setup_requires = setuptools_scm
install_requires =
    datacube<1.9
    eodatasets3>=0.22.0
    attrs>=18.1
    cattrs
    structlog
    dask
    distributed
    fsspec
    requests
    odc-algo
    odc-apps-dc-tools
    boto3
    xarray

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    datacube-alchemist = datacube_alchemist.cli:cli_with_envvar_handling

[options.extras_require]
dev =
  black
  pytest
  pytest-cov
  moto<5.0

[flake8]
extend-ignore = E203
max-line-length = 120
exclude = docs,tests,.eggs
doctests = True

[wheel]
universal = 1

[tool:pytest]
norecursedirs = .git
addopts = --cov=datacube_alchemist

[coverage:run]
branch = True
omit = tests/*
